--- a/blogAssignment/index.html
+++ b/blogAssignment/index.html
@@ -172,7 +172,7 @@
         </div>
 
         <div>
-            <h6 class="title footer-title">Categories</h6>
+            <h6 class="title footer-title">Units</h6>
 
             <ul class="footer-list list">
                 <li class="list-item">
@@ -202,10 +202,7 @@
                     <a href="#" class="list-link">Home</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">University Information</a>
-                </li>
-                <li class="list-item">
-                    <a href="#" class="list-link">Unit Information</a>
+                    <a href="./uni_info.html" class="list-link">University Information</a>
                 </li>
                 <li class="list-item">
                     <a href="#" class="list-link">Students</a>
