--- a/blogAssignment/uni_info.html
+++ b/blogAssignment/uni_info.html
@@ -2,11 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KIT202 BLOG ASSIGNMENT | Home</title>
-    <!-- Swiper.js styles -->
-    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
+    <title>KIT202 BLOG ASSIGNMENT | UNI info</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
