--- a/blogAssignment/uni_info.html
+++ b/blogAssignment/uni_info.html
@@ -80,10 +80,10 @@
                 <a href="./index.html">
                     <h2 class="logo">GROUP 3</h2>
                 </a>
-                <p class="company-description">This website blog page is the result of a group assignment undertake in
-                    the
-                    unit KIT202.
-                    Taught by the wonderful Samuel, who is super knowledgeable in all things dev </p>
+                <p class="company-description">He watched as the young man tried to impress everyone in the room with his intelligence. There was no doubt that he was
+                smart. The fact that he was more intelligent than anyone else in the room could have been easily deduced, but nobody was
+                really paying any attention due to the fact that it was also obvious that the young man only cared about his
+                intelligence.</p>
 
                 <ul class="list social-media">
                     <li class="list-item">
