--- a/blogAssignment/login.html
+++ b/blogAssignment/login.html
@@ -5,6 +5,7 @@
     <title>KIT202 BLOG ASSIGNMENT | Login</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/signIn.css">
 </head>
 
 <>
@@ -63,7 +64,7 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
     
-            <button type="submit">Login</button>
+            <button type="submit" class="loginButton">Login</button>
             <label>
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
