--- a/blogAssignment/signUp.html
+++ b/blogAssignment/signUp.html
@@ -5,6 +5,7 @@
     <title>KIT202 BLOG ASSIGNMENT | signUp</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/signUp.css">
 </head>
 
 <body>
