--- a/blogKIT101.html
+++ b/blogKIT101.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>KIT202 BLOG ASSIGNMENT | KIT107</title>
+    <title>KIT202 BLOG ASSIGNMENT | KIT101</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/signUp.css">
@@ -55,24 +55,35 @@
 
     <div class="about-us container" id="about-us" style="position: absolute; top:100px;">
         <h1>
-            Learning is great
+            How to get the most from your study
         </h1>
         <br>
-        <p class="description107" style="font-size: 24px; font-weight: bold;">
-            He knew what he was supposed to do. That had been apparent from the beginning. That was what made the choice so
-            difficult. What he was supposed to do and what he would do were not the same. This would have been fine if he were
-            willing to face the inevitable consequences, but he wasn't.
-            She tried to explain that love wasn't like pie. There wasn't a set number of slices to be given out. There wasn't less
-            to be given to one person if you wanted to give more to another. That after a set amount was given out it would all
-            disappear. She tried to explain this, but it fell on deaf ears.
-            There was a time and a place for Stephanie to use her magic. The problem was that she had a difficult time determining
-            this. She wished she could simply use it when the desire hit and there wouldn't be any unforeseen consequences.
-            Unfortunately, that's not how it worked and the consequences could be devastating if she accidentally used her magic at
-            the wrong time.
+        <p class="description101" style="font-size: 24px; font-weight: bold;">
+           
+            There was only half a worm in the apple. At first, Judy didn't quite comprehend what this meant. "Why would only half a
+            worm be living in an apple?" she wondered. And then it dawned on her. Judy quickly spit out the bite she had just taken
+            expecting to see the other half of the worm. It ended up being much worse than that.
+            It was going to rain. The weather forecast didn't say that, but the steel plate in his hip did. He had learned over the
+            years to trust his hip over the weatherman. It was going to rain, so he better get outside and prepare.
+            The choice was red, green, or blue. It didn't seem like an important choice when he was making it, but it was a choice
+            nonetheless. Had he known the consequences at that time, he would likely have considered the choice a bit longer. In the
+            end, he didn't and ended up choosing blue.
+        </p>
+        <p class="description101" style="font-size: 24px; font-weight: bold;">
+            Debbie put her hand into the hole, sliding her hand down as far as her arm could reach. She wiggled her fingers hoping
+            to touch something, but all she felt was air. She shifted the weight of her body to try and reach an inch or two more
+            down the hole. Her fingers still touched nothing but air.
+            He couldn't remember exactly where he had read it, but he was sure that he had. The fact that she didn't believe him was
+            quite frustrating as he began to search the Internet to find the article. It wasn't as if it was something that seemed
+            impossible. Yet she insisted on always seeing the source whenever he stated a fact.
+            I recently discovered I could make fudge with just chocolate chips, sweetened condensed milk, vanilla extract, and a
+            thick pot on slow heat. I tried it with dark chocolate chunks and I tried it with semi-sweet chocolate chips. It's
+            better with both kinds. It comes out pretty bad with just the dark chocolate. The best add-ins are crushed almonds and
+            marshmallows -- what you get from that is Rocky Road. It takes about twenty minutes from start to fridge, and then it
+            takes about six months to work off the twenty pounds you gain from eating it. All things in moderation, friends. All
+            things in moderation.
         </p>
     </div>
-
-
 
     <!-- Footer -->
     <footer class="footer section" style="position:relative; top:600px;">
