--- a/blogKIT203.html
+++ b/blogKIT203.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>KIT202 BLOG ASSIGNMENT | KIT107</title>
+    <title>KIT202 BLOG ASSIGNMENT | KIT203</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/signUp.css">
@@ -55,24 +55,36 @@
 
     <div class="about-us container" id="about-us" style="position: absolute; top:100px;">
         <h1>
-            Learning is great
+            How to get the most from your study
         </h1>
         <br>
-        <p class="description107" style="font-size: 24px; font-weight: bold;">
-            He knew what he was supposed to do. That had been apparent from the beginning. That was what made the choice so
-            difficult. What he was supposed to do and what he would do were not the same. This would have been fine if he were
-            willing to face the inevitable consequences, but he wasn't.
-            She tried to explain that love wasn't like pie. There wasn't a set number of slices to be given out. There wasn't less
-            to be given to one person if you wanted to give more to another. That after a set amount was given out it would all
-            disappear. She tried to explain this, but it fell on deaf ears.
-            There was a time and a place for Stephanie to use her magic. The problem was that she had a difficult time determining
-            this. She wished she could simply use it when the desire hit and there wouldn't be any unforeseen consequences.
-            Unfortunately, that's not how it worked and the consequences could be devastating if she accidentally used her magic at
-            the wrong time.
+        <p class="description203" style="font-size: 24px; font-weight: bold;">
+            There wasn't a whole lot he could do at that moment. He played the situation again and again in his head looking at what
+            he might have done differently to make the situation better. No matter how many times he relived the situation in his
+            head, there was never really a good alternative course of action. There simply wasn't a whole lot he could have done in
+            that particular moment.
+            She had been told time and time again that the most important steps were the first and the last. It was something that
+            she carried within her in everything she did, but then he showed up and disrupted everything. He told her that she had
+            it wrong. The first step wasn't the most important. The last step wasn't the most important. It was the next step that
+            was the most important.
+            He had done everything right. There had been no mistakes throughout the entire process. It had been perfection and he
+            knew it without a doubt, but the results still stared back at him with the fact that he had lost.
+        </p>
+        <p class="description203" style="font-size: 24px; font-weight: bold;"> 
+            It was a concerning development that he couldn't get out of his mind. He'd had many friends throughout his early years
+            and had fond memories of playing with them, but he couldn't understand how it had all stopped. There was some point as
+            he grew up that he played with each of his friends for the very last time, and he had no idea that it would be the last.
+            Her hand was balled into a fist with her keys protruding out from between her fingers. This was the weapon her father
+            had shown her how to make when she walked alone to her car after work. She wished that she had something a little more
+            potent than keys between her fingers. It would have been nice to have some mace or pepper spray. He had been meaning to
+            buy some but had never gotten around to it. As the mother bear took another step forward with her cubs in tow, she knew
+            her fist with keys wasn't going to be an adequate defense for this situation.
+            Spending time at national parks can be an exciting adventure, but this wasn't the type of excitement she was hoping to
+            experience. As she contemplated the situation she found herself in, she knew she'd gotten herself in a little more than
+            she bargained for. It wasn't often that she found herself in a tree staring down at a pack of wolves that were looking
+            to make her their next meal.
         </p>
     </div>
-
-
 
     <!-- Footer -->
     <footer class="footer section" style="position:relative; top:600px;">
