--- a/blogKIT206.html
+++ b/blogKIT206.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>KIT202 BLOG ASSIGNMENT | KIT107</title>
+    <title>KIT202 BLOG ASSIGNMENT | KIT206</title>
     <!-- Custom styles -->
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/signUp.css">
@@ -55,24 +55,34 @@
 
     <div class="about-us container" id="about-us" style="position: absolute; top:100px;">
         <h1>
-            Learning is great
+            How to get the most from your study
         </h1>
         <br>
-        <p class="description107" style="font-size: 24px; font-weight: bold;">
-            He knew what he was supposed to do. That had been apparent from the beginning. That was what made the choice so
-            difficult. What he was supposed to do and what he would do were not the same. This would have been fine if he were
-            willing to face the inevitable consequences, but he wasn't.
-            She tried to explain that love wasn't like pie. There wasn't a set number of slices to be given out. There wasn't less
-            to be given to one person if you wanted to give more to another. That after a set amount was given out it would all
-            disappear. She tried to explain this, but it fell on deaf ears.
-            There was a time and a place for Stephanie to use her magic. The problem was that she had a difficult time determining
-            this. She wished she could simply use it when the desire hit and there wouldn't be any unforeseen consequences.
-            Unfortunately, that's not how it worked and the consequences could be devastating if she accidentally used her magic at
-            the wrong time.
+        <p class="description206" style="font-size: 24px; font-weight: bold;">
+            "Begin today!" That's all the note said. There was no indication from where it came or who may have written it. Had it
+            been meant for someone else? Meghan looked around the room, but nobody made eye contact back. For a brief moment, she
+            thought it might be a message for her to follow her dreams, but ultimately decided it was easier to ignore it as she
+            crumpled it up and threw it away.
+            The time had come for Nancy to say goodbye. She had been dreading this moment for a good six months, and it had finally
+            arrived despite her best efforts to forestall it. No matter how hard she tried, she couldn't keep the inevitable from
+            happening. So the time had come for a normal person to say goodbye and move on. It was at this moment that Nancy decided
+            not to be a normal person. After all the time and effort she had expended, she couldn't bring herself to do it.
+            There was something in the sky. What exactly was up there wasn't immediately clear. But there was definitely something
+            in the sky and it was getting bigger and bigger.
+        </p>
+        <p class="description206" style="font-size: 24px; font-weight: bold;">
+        It was that terrifying feeling you have as you tightly hold the covers over you with the knowledge that there is
+        something hiding under your bed. You want to look, but you don't at the same time. You're frozen with fear and unable to
+        act. That's where she found herself and she didn't know what to do next
+        Finding the truth wouldn't be easy, that's for sure. Then there was the question of whether or not Jane really wanted to
+        know the truth. That's the thing that bothered her most. It wasn't the difficulty of actually finding out what happened
+        that was the obstacle, but having to live with that information once it was found.
+        Devon couldn't figure out the color of her eyes. He initially would have guessed that they were green, but the more he
+        looked at them he almost wanted to say they were a golden yellow. Then there were the flashes of red and orange that
+        seemed to be streaked throughout them. It was almost as if her eyes were made of opal with the sun constantly glinting
+        off of them and bringing out more color. They were definitely the most unusual pair of eyes he'd ever seen.
         </p>
     </div>
-
-
 
     <!-- Footer -->
     <footer class="footer section" style="position:relative; top:600px;">
