--- a/blogkit202.html
+++ b/blogkit202.html
@@ -68,6 +68,20 @@
         Had she taken the time to objectively consider these downsides, she would have never agreed to publically sing that
         first song.
     </p>
+    <p class="description202" style="font-size: 24px; font-weight: bold;">
+        Brock would have never dared to do it on his own he thought to himself. That is why Kenneth and he had become such good
+        friends. Kenneth forced Brock out of his comfort zone and made him try new things he'd never imagine doing otherwise. Up
+        to this point, this had been a good thing. It had expanded Brock's experiences and given him a new appreciation for
+        life. Now that both of them were in the back of a police car, all Brock could think was that he would have never dared
+        do it except for the influence of Kenneth.
+        Debbie had taken George for granted for more than fifteen years now. He wasn't sure what exactly had made him choose
+        this time and place to address the issue, but he decided that now was the time. He looked straight into her eyes and
+        just as she was about to speak, turned away and walked out the door.
+        He was aware there were numerous wonders of this world including the unexplained creations of humankind that showed the
+        wonder of our ingenuity. There are huge heads on Easter Island. There are the Egyptian pyramids. There’s Stonehenge. But
+        he now stood in front of a newly discovered monument that simply didn't make any sense and he wondered how he was ever
+        going to be able to explain it.
+    </p>
 </div>
 
 <!-- Footer -->
@@ -96,19 +110,19 @@
 
             <ul class="footer-list list">
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT202</a>
+                    <a href="blogkit202.html" class="list-link">KIT202</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT203</a>
+                    <a href="blogKIT203.html" class="list-link">KIT203</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT107</a>
+                    <a href="blogKIT107.html" class="list-link">KIT107</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT206</a>
+                    <a href="blogKIT206.html" class="list-link">KIT206</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT101</a>
+                    <a href="blogKIT101.html" class="list-link">KIT101</a>
                 </li>
             </ul>
 
