--- a/login.html
+++ b/login.html
@@ -104,19 +104,19 @@ style="position: relative; width: 100%; height: 300px;">
 
             <ul class="footer-list list">
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT202</a>
+                    <a href="blogkit202.html" class="list-link">KIT202</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT203</a>
+                    <a href="blogKIT203.html" class="list-link">KIT203</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT107</a>
+                    <a href="blogKIT107.html" class="list-link">KIT107</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT206</a>
+                    <a href="blogKIT206.html" class="list-link">KIT206</a>
                 </li>
                 <li class="list-item">
-                    <a href="#" class="list-link">KIT101</a>
+                    <a href="blogKIT101.html" class="list-link">KIT101</a>
                 </li>
             </ul>
 
